# atestaion

./: README.md  docker-compose.yaml  pyproject.toml
amazing_hunting/: asgi.py  settings.py  urls.py  wsgi.py
amazing_hunting/sete/: apps.py
retail/: admin.py  filter.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py  0002_remove_retail_supplier_retail_provision.py
users/: models.py
