[tool.poetry]
name = "atestaion"
version = "0.1.0"
description = ""
authors = ["mustafanysan <mustafa.nysan@mail.ru>"]
readme = "README.md"
packages = [{include = "amazing_hunting"}]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
envparse = "^0.2.0"
django-filter = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
